--- a/webroot/scss/templates/vendor.scss
+++ b/webroot/scss/templates/vendor.scss
@@ -1,10 +1,12 @@
 body#vendor {
   background-color : $dark-grey;
+  #topbar, #footer { display: none;}
 }
 
 main#vendor-page {
   padding-top : rem-calc(60px);
 }
+
 
 #next-order {
   box-shadow       : 0 0 1rem $black-a50;
@@ -59,29 +61,31 @@ main#vendor-page {
 }
 
 .vendor-button {
+  position: relative;
   text-align  : center;
   text-shadow : 0 0 0.5rem $text-grey;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
 }
 @-webkit-keyframes accept-glow {
   0% { text-shadow : 0 0 0.5rem $text-grey;}
   50% { text-shadow:0 0 1rem $white;}
   100% { text-shadow : 0 0 0.5rem $text-grey;}
 }
-
+$success-green: rgba(50,255,50,1);
+$ready-color: rgba(125,185,232,1);
 #order-accept-button {
   height      : rem-calc(200px);
   font-size   : rem-calc(128px);
   line-height : rem-calc(225px);
-  background  : rgb(191, 210, 85); /* Old browsers */
-  background  : -moz-linear-gradient(top, rgba(191, 210, 85, 1) 0%, rgba(142, 185, 42, 1) 50%, rgba(114, 170, 0, 1) 51%, rgba(158, 203, 45, 1) 100%); /* FF3.6+ */
-  background  : -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(191, 210, 85, 1)), color-stop(50%, rgba(142, 185, 42, 1)), color-stop(51%, rgba(114, 170, 0, 1)), color-stop(100%, rgba(158, 203, 45, 1))); /* Chrome,Safari4+ */
-  background  : -webkit-linear-gradient(top, rgba(191, 210, 85, 1) 0%, rgba(142, 185, 42, 1) 50%, rgba(114, 170, 0, 1) 51%, rgba(158, 203, 45, 1) 100%); /* Chrome10+,Safari5.1+ */
-  background  : -o-linear-gradient(top, rgba(191, 210, 85, 1) 0%, rgba(142, 185, 42, 1) 50%, rgba(114, 170, 0, 1) 51%, rgba(158, 203, 45, 1) 100%); /* Opera 11.10+ */
-  background  : -ms-linear-gradient(top, rgba(191, 210, 85, 1) 0%, rgba(142, 185, 42, 1) 50%, rgba(114, 170, 0, 1) 51%, rgba(158, 203, 45, 1) 100%); /* IE10+ */
-  background  : linear-gradient(to bottom, rgba(191, 210, 85, 1) 0%, rgba(142, 185, 42, 1) 50%, rgba(114, 170, 0, 1) 51%, rgba(158, 203, 45, 1) 100%); /* W3C */
-  filter      : progid:DXImageTransform.Microsoft.gradient(startColorstr='#bfd255', endColorstr='#9ecb2d', GradientType=0); /* IE6-9 */
+  background: -webkit-linear-gradient(top, $success-green 0%, $ready-color 0%, $ready-color 100%, $ready-color 100%);
   -webkit-animation: accept-glow 3s ease-in-out infinite normal 0s running forwards;
-//  -webkit-animation   : stash-splash-circle 1s ease-in 1 normal 0.6s paused forwards;
+  &.launching {
+    background: none !important;
+    background-color: $success-green !important;
+  }
 }
 
 #order-reject-button {
@@ -187,4 +191,19 @@ main#vendor-page {
       }
     }
   }
+}
+
+#order-accepted {
+  position: fixed;
+  top:0;
+  left:0;
+  z-index:999999;
+  -webkit-transition: opacity 0.15s;
+  height:rem-calc(200px);
+  margin-top:rem-calc(100px);
+  font-size:rem-calc(96px);
+  color:$white;
+  background-color:$black-a50;
+  padding: $base-padding;
+  width:100%;
 }
