--- a/webroot/scss/palette.scss
+++ b/webroot/scss/palette.scss
@@ -30,6 +30,7 @@ $white: rgb(255,255,255);
 $dark-grey: rgb(25,25,25);
 $transparent: rgba(0,0,0,0);
 $error-color: lighten($xtreme-red, 20%);
+$success-green: rgba(50,255,50,1);
 
 
 $meat-opt-bg-color: rgb(255,115, 32);
@@ -37,7 +38,6 @@ $meat-opt-bg-color: rgb(255,115, 32);
 $sauce-opt-bg-color: rgba(32,160,174, 1);
 $cheese-opt-bg-color: rgba(178,45,173, 1);
 $veggie-opt-bg-color: rgba(50,165,20, 1);
-
 
 
 // GRADIENTS
