additions to store status

--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -5356,7 +5356,7 @@ h3.top-bar-status-header {
     text-align: center; }
   .top-bar-status.store {
     -webkit-transform: translateY(0.1rem) !important; }
-  .top-bar-status.closed {
+  .top-bar-status.store-closed {
     font-size: 3em !important;
     -webkit-transform: translateY(1rem) !important; }
   .top-bar-status.available {
