--- a/webroot/scss/nav.scss
+++ b/webroot/scss/nav.scss
@@ -203,7 +203,7 @@ h3.top-bar-status-header {
   padding: 0.05 * $topbar-height 1rem;
   &.store { -webkit-transform: translateY(0.1rem) !important; }
 
-  &.closed{
+  &.store-closed{
     font-size: 3em !important;
     -webkit-transform: translateY(1rem) !important;
   }
