--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -4943,9 +4943,6 @@ body {
   background-repeat: no-repeat;
   background-position: fixed; }
 
-body#vendor_ui {
-  background: initial !important; }
-
 body#vendor {
   width: 100%;
   height: 100%;
@@ -5704,6 +5701,20 @@ main#js-console {
       display: block;
       border-bottom: 1px solid #43ac6a;
       background-color: whitesmoke; }
+
+h1.success, h2.success, h3.success, h4.success, h5.success {
+  color: #43ac6a;
+  padding: 0.5rem;
+  border: 1px solid #43ac6a;
+  text-transform: uppercase; }
+
+#upload-menu-form-container {
+  margin-top: 2rem;
+  padding: 1rem;
+  background-color: #333333;
+  border: 2px solid white; }
+  #upload-menu-form-container label {
+    color: #0779be; }
 
 @-webkit-keyframes modal_loading_dots {
   0% {
