--- a/webroot/scss/typography.scss
+++ b/webroot/scss/typography.scss
@@ -444,3 +444,15 @@ span.tiny-opt, span.tiny-opt-label {
 
  span.tiny-opt-label { top: -3px;}
  span.tiny-opt { top:-1px; padding-left:3px;}
+
+
+#no-service {
+  margin-top:3rem;
+  padding: 2rem;}
+ .user-info {
+   h4.expanded { text-transform: uppercase;}
+   p {
+     line-height : 1rem;
+     margin:0.5rem;
+   }
+ }
